--- a/名字随机生成器 测试.ipynb
+++ b/名字随机生成器 测试.ipynb
@@ -266,7 +266,7 @@
     "        names = random_name()\n",
     "        print(names)\n",
     "        # 保存到文件\n",
-    "        with open('names.txt', 'a') as f:\n",
+    "        with open('./data/names.txt', 'a') as f:\n",
     "            # f.write(names.split(\"\\t\")[0] + '\\n')\n",
     "            f.write(names + '\\n')\n",
     "        # print(names.split(\"\\t\")[0])"
